feat: 升级数据库支持并增强系统可观测性
- 新增 PostgreSQL 数据库支持，保持 SQLite 兼容性
- 添加环境变量驱动的数据库类型切换功能
- 完善日志记录和请求跟踪系统
- 优化 AI 服务性能监控和错误处理
- 增强开发环境的调试信息输出
- 添加完整的 Docker 部署支持
- 更新项目文档和配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,18 @@ docs/build/
 # Local configuration files
 config.local.js
 config.local.json
+
+# Docker related
+docker-compose.override.yml
+.docker/
+
+# Production data
+data/
+*.sqlite*
+
+# Docker volumes
+volumes/
+
+# Deployment secrets
+secrets/
+.secrets/
