--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/pg": "^8.15.4",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.7.0",
+    "pg": "^8.16.2",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.0.0",
     "sequelize": "^6.37.7",
