feat: 前端 API 配置支持环境变量
- 添加前端环境变量配置文件 (.env.example, .env.production.example)
- 更新 API 服务以支持从环境变量读取 API 基础 URL
- 添加 TypeScript 类型定义支持环境变量
- 增强 API 配置的灵活性和调试信息
- 更新前端 README 文档，添加详细的环境配置说明
- 支持开发/生产环境的不同 API 配置

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,13 @@ POSTGRES_DB=propmt
 
 # Docker Hub 用户名 (用于 GitHub Actions)
 DOCKERHUB_USERNAME=maxazure
+
+# ===================================
+# 前端配置说明
+# ===================================
+# 前端应用有独立的 .env 文件
+# 请参考 frontend/.env.example 进行配置
+# 主要配置项包括：
+# - VITE_API_BASE_URL: API 服务器地址
+# - VITE_APP_ENV: 应用环境
+# - VITE_APP_NAME: 应用名称
