docs: 添加环境变量空格处理说明
- 更新 .env.example 添加包含空格的应用名称示例
- 在 README 中添加环境变量格式说明
- 说明处理空格和特殊字符的三种方法
- 提供实用的配置示例

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -9,8 +9,11 @@ VITE_API_BASE_URL=http://localhost:3001
 # 应用环境
 VITE_APP_ENV=development
 
-# 应用名称
+# 应用名称（支持包含空格的名称）
 VITE_APP_NAME=PromptFlow
+# 示例：包含空格的名称
+# VITE_APP_NAME=My Custom App
+# VITE_APP_NAME="Another App Name"
 
 # 其他可选配置
 # VITE_ENABLE_ANALYTICS=false
