--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "migrate:categories": "ts-node src/scripts/migrateCategoryData.ts"
   },
   "keywords": [],
   "author": "",
